# custom-protocol

./: README.md  development.ipynb  main.py  pyproject.toml  scapy.ipynb  totp_backup.txt
.ipynb_checkpoints/: development-checkpoint.ipynb
src/: authenticator.py  connection.py  totp.py
src/connection/: connection_handler.py  protocol.py  socket_buffer.py  socket_server.py
