[project]
name = "custom-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geoip2>=5.1.0",
    "scapy>=2.6.1",
]

[dependency-groups]
dev = [
    "elevate>=0.1.3",
    "geoip2>=5.1.0",
    "pyx>=0.16",
    "ruff>=0.11.11",
    "scapy>=2.6.1",
    "usethis>=0.11.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["A", "C4", "E4", "E7", "E9", "F", "FLY", "FURB", "I", "PLE", "PLR", "RUF", "SIM", "UP", "D2", "D3", "D4"]
ignore = ["PLR2004", "SIM108"]
pydocstyle.convention = "numpy"
